<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="iOSTestingExample" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ohf-4H-ngs">
                                <rect key="frame" x="229" y="321" width="143" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="answearTextField"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="143" id="PDq-zo-ryM"/>
                                    <constraint firstAttribute="height" constant="30" id="stH-sJ-Q1h"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Why do you test?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9W7-jh-3XE" customClass="SSDynamicLabel">
                                <rect key="frame" x="234" y="292" width="133" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="questionLabel"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="133" id="pkA-0O-X5j"/>
                                    <constraint firstAttribute="width" constant="133" id="xne-HN-FeN"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="pkA-0O-X5j"/>
                                        <exclude reference="xne-HN-FeN"/>
                                    </mask>
                                </variation>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bpf-c2-J5J">
                                <rect key="frame" x="283" y="391" width="34" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="sendButton"/>
                                <state key="normal" title="send"/>
                                <connections>
                                    <action selector="sendButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fwF-6I-PXa"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="wrotQA-logo" translatesAutoresizingMaskIntoConstraints="NO" id="7o5-Pm-YuT">
                                <rect key="frame" x="154" y="85" width="292" height="155"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="240" id="ceD-TO-2Bv"/>
                                    <constraint firstAttribute="height" constant="155" id="kT4-Qq-VJK"/>
                                </constraints>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="ceD-TO-2Bv"/>
                                    </mask>
                                </variation>
                            </imageView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="9W7-jh-3XE" firstAttribute="leading" secondItem="ohf-4H-ngs" secondAttribute="leading" id="FY1-Cc-K5X"/>
                            <constraint firstItem="9W7-jh-3XE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="O1H-rb-PTQ"/>
                            <constraint firstItem="Bpf-c2-J5J" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="P2g-ZX-zQ9"/>
                            <constraint firstItem="9W7-jh-3XE" firstAttribute="top" secondItem="7o5-Pm-YuT" secondAttribute="bottom" constant="52" id="Qbw-RF-WWR"/>
                            <constraint firstItem="7o5-Pm-YuT" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="65" id="b2W-oG-HV9"/>
                            <constraint firstItem="ohf-4H-ngs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="diZ-ZF-mUP"/>
                            <constraint firstItem="ohf-4H-ngs" firstAttribute="top" secondItem="9W7-jh-3XE" secondAttribute="bottom" constant="8" symbolic="YES" id="ews-nS-BWu"/>
                            <constraint firstItem="ohf-4H-ngs" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="36" id="kya-Yq-rqd"/>
                            <constraint firstItem="Bpf-c2-J5J" firstAttribute="top" secondItem="ohf-4H-ngs" secondAttribute="bottom" constant="40" id="loz-9K-rOX"/>
                            <constraint firstItem="7o5-Pm-YuT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="n47-8d-MMj"/>
                        </constraints>
                        <variation key="default">
                            <mask key="constraints">
                                <exclude reference="FY1-Cc-K5X"/>
                            </mask>
                        </variation>
                    </view>
                    <connections>
                        <outlet property="answearTextField" destination="ohf-4H-ngs" id="hrS-jw-HL3"/>
                        <outlet property="questionLabel" destination="9W7-jh-3XE" id="zKT-s5-Oda"/>
                        <outlet property="sendButton" destination="Bpf-c2-J5J" id="V8S-ds-oV3"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="419" y="208"/>
        </scene>
    </scenes>
    <resources>
        <image name="wrotQA-logo" width="688" height="322"/>
    </resources>
</document>
